Fixing settings panel overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -448,6 +448,8 @@ button:hover {
     display: flex;
     flex-direction: column;
     gap: 10px;
+
+    overflow: overlay;
 }
 
 .section {
